# anndata-proteomics-bridge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  Snakefile  anndataview.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
TODO/: PLAN_20260501_rules-loader-registry-validate.md  PLAN_20260501_src-cleanup-restart.md  PLAN_20260502_jsonschema-and-cli.md  PLAN_20260503_cli-convert-wiring.md  PLAN_20260503_converters-conversion.md  PLAN_20260503_converters-recognize.md  PLAN_20260504_annprotsum-r-package.md  PLAN_20260508_report-index-file-sizes.md  PLAN_20260511_modification-handling.md  PLAN_20260511_parameters-and-modifications.md  PLAN_20260512_toml-schema-cleanup.md  PLAN_20260513_fasta-annotation.md  PLAN_20260601_swapper-levels-roundtrip.md  PLAN_20260619_proteobench-param-integration.md  REVIEW_qpx.md  REVIEW_qpx_vs_apb.md  REVIEW_toml_modifications.md  TODO_UI.md  TODO_code_review_june.md  TODO_fasta.md  TODO_from_string_null_to_string_toml.md  TODO_modification_homogenization_design.md  TODO_parmeter_parsing.md  TODO_to_mu_data.md  TODO_ui_test_tool.md  TODO_viewer.md  plan_review_toml_structure.md
TODO/Archive/: PLAN_20260501_rules-schema-pydantic.md  PLAN_20260502_readers-dispatch-tabular.md  PLAN_20260504_relocate-annprotsum-and-reporter.md  PLAN_20260504_report-all-converters.md  TODO_20260620_code-review-june.md  how_i_refactored_the_diann_tomls.md
TODO/HOWTO/: test_gui.md
config/: diann.toml  spectronaut.toml
docs/: ARCHITECTURE.md  DIANN_to_AnnData_mapping.md  Makefile  RESTART_PLAN.md  _md2html_links.lua  _pandoc_mermaid.html  _pandoc_nav.html  index.md  parameter_parsers.html  parameter_parsers.md  parsing_architecture.html  parsing_architecture.md  render_docs.sh  toml_schema.md
examples/: convert_diann_example.py  convert_spectronaut_example.py  diann_annotation.csv  maxquant_annotation.csv  sample_annotation.csv
src/anndata_proteomics/: _logging.py  annotation.py  builder.py  cli.py  core.py  download_benchmark.py  proforma.py  test_data.py  utils.py
src/anndata_proteomics/annotation/: __init__.py  _sanitize.py  apply.py  loader.py  schema.py  var_fasta.py
src/anndata_proteomics/benchmarks/: __init__.py  cli.py  loader.py
src/anndata_proteomics/configs/: diann.toml  maxquant.toml  spectronaut.toml
src/anndata_proteomics/converters/: _axis.py  _pieces.py  (+7 more)
src/diann_converter/: __init__.py  converter.py  parse_settings.py  proforma.py  reader.py
test_data_download/: Makefile
tests/: conftest.py  test_annotation.py  test_annotation_var_fasta.py  test_benchmark_data.py  test_cli.py  test_cli_integration.py  test_converter.py  test_converters_assemble.py  test_converters_e2e.py  test_converters_factors.py  test_converters_fragments.py  test_converters_long.py  test_converters_wide.py  test_diann_levels.py  test_fasta_annotation.py  test_fasta_lookup.py  test_generate_report.py  test_json_schema_validation.py  test_modifications_model.py  test_mudata_levels.py  test_packaged_modifications.py  test_packaged_rules.py  test_params_anndata_io.py  test_params_diann.py  test_params_fragpipe.py  test_params_maxquant.py  test_params_metamorpheus.py  test_params_model.py  test_params_msaid.py  test_params_peaks.py  test_params_sage.py  test_params_spectronaut.py  test_params_yaml_vendors.py  test_pipeline_modifications.py  test_readers_dispatch.py  test_readers_integration.py  test_readers_tabular.py  test_recognize.py  test_rule_loader.py  test_rule_models.py  (+9 more)
tools/: generate_report.py
(+66 files in other folders)
