[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anndata-proteomics"
version = "0.1.0"
description = "Convert proteomics software output to AnnData format"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Witold Wolski", email = "wew@fgcz.ethz.ch"}
]
keywords = ["proteomics", "anndata", "mass-spectrometry", "diann", "maxquant"]

dependencies = [
    "pandas",
    "numpy",
    "anndata",
    "pyarrow",
    "requests",
    "beautifulsoup4",
    "toml",
    "cyclopts",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as integration test (requires network)",
]
