[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anndata-proteomics"
version = "0.1.0"
description = "Convert proteomics software output to AnnData format"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Witold Wolski", email = "wew@fgcz.ethz.ch"}
]
keywords = ["proteomics", "anndata", "mass-spectrometry", "diann", "maxquant"]

dependencies = [
    "pandas",
    "numpy",
    "anndata",
    "mudata",
    "pyarrow",
    "requests",
    "beautifulsoup4",
    "toml",
    "cyclopts",
    "pydantic>=2",
    "loguru",
]

[project.scripts]
anndata-proteomics = "anndata_proteomics.scripts.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "jsonschema>=4",
]
gui = [
    "marimo",
    "plotly",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as integration test (requires network)",
]
